# torchcore

./: dev.py  install.sh
benchmark/: benchmark.py  coco_benchmark.py
data/: __init__.py  collate.py  data_fecher.py  data_feeder.py  data_loader.py  dataset_util.py  generate_coco_sub_set.py  imageset.py  my_gaussian_tools.py  sampler.py  transform_func.py  transforms.py  util.py  workbench.py
dnn/: __init__.py  dataset.py  trainer.py
dnn/extensions/: CMakeLists.txt  __init__.py  _init.py  crop_and_resize_cpu.cpp  crop_and_resize_gpu.cpp  nms_cpu.cpp  overlaps_cpu.cpp  overlaps_gpu.cpp  roi_pool.py  roi_pool_binding.cpp  roi_pool_cpu.cpp  roi_pool_cuda.cpp  roi_pool_kernel.cu  roipool_cpu.cpp  roipool_gpu.cpp  setup.py  test.py  test_nms.py  test_overlaps.py  test_rioalign.py  test_roipool.py
dnn/extensions/modules/: __init__.py  _init.py  crop_and_resize.py  nms.py  overlaps.py  roi_align.py  roipool.py
dnn/extensions/modules_cpu/: CMakeLists.txt  crop_and_resize_cpu.cpp  crop_and_resize_cpu.hpp  nms_cpu.cpp  nms_cpu.hpp  overlaps_cpu.cpp  overlaps_cpu.hpp  roipool_cpu.cpp  roipool_cpu.hpp
dnn/extensions/modules_gpu/: CMakeLists.txt  crop_and_resize_gpu.cu  crop_and_resize_gpu.hpp  cuda_tools.hpp  overlaps_gpu.cu  overlaps_gpu.hpp  roipool_gpu.cu  roipool_gpu.hpp
dnn/extensions/tests/: __init__.py  test.py  test_nms.py  test_overlaps.py  test_overlaps_gpu.py  test_roi_align.py
dnn/extensions/tests/data/: nms_test.pkl  overlaps_data.pkl
engine/: launch.py
evaluation/: __init__.py  build.py  coco_detection.py
mlblogapi/: mlblogapi.py
tools/: logger.py  (+18 more)
(+293 files in other folders)
